# judge

./: .gitignore  README.md  pyproject.toml
judge/: __init__.py  __main__.py  config.py  diff.py  fetch.py  login.py  parse.py  remove.py  settings.py
tests/: test_judge.py
